--- a/styles.css
+++ b/styles.css
@@ -903,7 +903,7 @@ footer {
 
     .main-header {
       display: flex;
-      justify-content: center; 
+      justify-content: space-around; 
       align-items: center; 
       background-color: #f7f4fb;
       padding: 20px 10px;
@@ -915,6 +915,7 @@ footer {
     
     .main-header .logo {
       visibility: hidden;
+      display: none;
     }
     
     nav {
@@ -1692,7 +1693,7 @@ footer {
 
     .main-header {
       display: flex;
-      justify-content: center; 
+      justify-content: space-around; 
       align-items: center; 
       flex-direction: row;
       background-color: #f7f4fb;
@@ -1705,6 +1706,7 @@ footer {
     
     .main-header .logo {
       visibility: hidden;
+      display: none;
     }
     
     nav {
@@ -1746,7 +1748,7 @@ footer {
       background-color: #00d85e;
       color: white;
       text-decoration: none;
-      padding: 15px 5px;
+      padding: 15px 15px;
       border-radius: 5px;
       margin: auto;
       font-size: 16px;
@@ -1870,7 +1872,7 @@ footer {
       padding: 20px;
       background-color: #fff;
       max-width: 500px;
-      margin-left: 16%;
+      margin-left: 10%;
       margin-bottom: 2%;
     }
     
