--- a/Proyecto_AAA/styles.css
+++ b/Proyecto_AAA/styles.css
@@ -318,7 +318,7 @@
     margin-right: 60%;
   }
 
-  .service-card h5 {
+  .service-card h1 {
     font-size: 20px;
     margin-bottom: 10px;
   }
@@ -334,12 +334,13 @@
   }
 
   .services-description h2,
-  .services-description h3 {
+  .services-description h1 {
     margin-bottom: 20px;
   }
 
-  .services-description h3 {
+  .services-description h1 {
     color: #00d85e;
+    font-size: 1.5em;
   }
 
   .services-description h2 {
@@ -597,7 +598,8 @@
     margin-top: 40px;
   }
 
-  .project h5 {
+  #digital-brands .projects .project h1 {
+    font-size: 1.25rem;
     margin-bottom: 15px;
     color: #888;
     text-align: left;
@@ -772,6 +774,35 @@
   .footer-note .footer-links a:hover {
     color: #ccc;
   }
+
+  a:focus {
+    outline: 3px solid #00d85e;
+    outline-offset: 2px; 
+    background-color: rgba(4, 73, 35, 0.1); 
+  }
+
+  
+
+  .skip-link {
+    position: absolute;
+    top: -40px;
+    left: 45%;
+    background-color: #ffbf00;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: top 0.3s ease;
+  }
+  
+  .skip-link:focus {
+    top: 0; 
+    background-color: #00d85e;
+    color: white;
+  }
+  
+
 }
 
 /* Tablets */
@@ -1069,7 +1100,7 @@
     align-items: center;
   }
 
-  .service-card h5 {
+  .service-card h1 {
     font-size: 20px;
     margin-bottom: 10px;
   }
@@ -1084,12 +1115,13 @@
   }
 
   .services-description h2,
-  .services-description h3 {
+  .services-description h1 {
     margin-bottom: 20px;
   }
 
-  .services-description h3 {
+  .services-description h1 {
     color: #00d85e;
+    font-size: 1.5em;
   }
 
   .services-description h2 {
@@ -1366,7 +1398,8 @@
     margin-top: 40px;
   }
 
-  .project h5 {
+  #digital-brands .projects .project h1 {
+    font-size: 1.25rem;
     margin-bottom: 15px;
     color: #888;
     text-align: left;
@@ -1547,6 +1580,34 @@
   .footer-note .footer-links a:hover {
     color: #ccc;
   }
+
+  a:focus {
+    outline: 3px solid #00d85e; 
+    outline-offset: 2px; 
+    background-color: rgba(255, 99, 71, 0.1);
+  }
+
+  
+  .skip-link {
+    position: absolute;
+    top: -40px;
+    left: 45%;
+    background-color: #ffbf00;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: top 0.3s ease;
+  }
+  
+  .skip-link:focus {
+    top: 0; 
+    background-color: #00d85e;
+    color: white;
+  }
+
+
 }
 
 /* Móvil */
@@ -1846,7 +1907,7 @@
     align-items: center;
   }
 
-  .service-card h5 {
+  .service-card h1 {
     font-size: 20px;
     margin-bottom: 10px;
   }
@@ -1861,12 +1922,13 @@
   }
 
   .services-description h2,
-  .services-description h3 {
+  .services-description h1 {
     margin-bottom: 20px;
   }
 
-  .services-description h3 {
+  .services-description h1 {
     color: #00d85e;
+    font-size: 1.5em;
   }
 
   .services-description h2 {
@@ -2138,7 +2200,8 @@
     margin-top: 40px;
   }
 
-  .project h5 {
+  #digital-brands .projects .project h1{
+    font-size: 1.25rem;
     margin-bottom: 15px;
     color: #888;
     text-align: left;
@@ -2319,6 +2382,34 @@
   .footer-note .footer-links a:hover {
     color: #ccc;
   }
+
+  a:focus {
+    outline: 3px solid #00d85e; 
+    outline-offset: 2px; 
+    background-color: rgba(255, 99, 71, 0.1); 
+  }
+
+  
+  .skip-link {
+    position: absolute;
+    top: -40px;
+    left: 45%;
+    background-color: #ffbf00;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: top 0.3s ease;
+  }
+  
+  .skip-link:focus {
+    top: 0; 
+    background-color: #00d85e;
+    color: white;
+  }
+
+
 }
 
 /* Móvil  */
@@ -2621,7 +2712,7 @@
     align-items: center;
   }
 
-  .service-card h5 {
+  .service-card h1 {
     font-size: 20px;
     margin-bottom: 10px;
   }
@@ -2635,12 +2726,13 @@
   }
 
   .services-description h2,
-  .services-description h3 {
+  .services-description h1 {
     margin-bottom: 20px;
   }
 
-  .services-description h3 {
+  .services-description h1 {
     color: #00d85e;
+    font-size: 1.5em;
   }
 
   .services-description h2 {
@@ -2912,7 +3004,8 @@
     margin-top: 40px;
   }
 
-  .project h5 {
+  .digital-brands .projects .project h1 {
+    font-size: 1.25rem;
     margin-bottom: 15px;
     color: #888;
     text-align: left;
@@ -3088,6 +3181,34 @@
   .footer-note .footer-links a:hover {
     color: #ccc;
   }
+
+  a:focus {
+    outline: 3px solid #00d85e; 
+    outline-offset: 2px; 
+    background-color: rgba(255, 99, 71, 0.1); 
+  }
+
+  
+  .skip-link {
+    position: absolute;
+    top: -40px;
+    left: 45%;
+    background-color: #ffbf00;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: top 0.3s ease;
+  }
+  
+  .skip-link:focus {
+    top: 0; 
+    background-color: #00d85e;
+    color: white;
+  }
+  
+
 }
 
 /* Móvil Pequeño */
@@ -3392,7 +3513,7 @@
     align-items: center;
   }
 
-  .service-card h5 {
+  .service-card h1 {
     font-size: 20px;
     margin-bottom: 10px;
   }
@@ -3405,11 +3526,11 @@
   }
 
   .services-description h2,
-  .services-description h3 {
+  .services-description h1 {
     margin-bottom: 20px;
   }
 
-  .services-description h3 {
+  .services-description h1 {
     color: #00d85e;
     font-size: 18px;
   }
@@ -3683,7 +3804,8 @@
     margin-top: 40px;
   }
 
-  .project h5 {
+  .digital-brands .projects .project h1 {
+    font-size: 1.25rem;
     margin-bottom: 15px;
     color: #888;
     text-align: left;
@@ -3858,4 +3980,33 @@
   .footer-note .footer-links a:hover {
     color: #ccc;
   }
+
+  a:focus {
+    outline: 3px solid #00d85e; 
+    outline-offset: 2px; 
+    background-color: rgba(255, 99, 71, 0.1); 
+  }
+
+  
+  .skip-link {
+    position: absolute;
+    top: -40px;
+    left: 45%;
+    background-color: #ffbf00;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: top 0.3s ease;
+  }
+  
+  .skip-link:focus {
+    top: 0; 
+    background-color: #00d85e;
+    color: white;
+  }
+  
+
+
 }
